feat: update some code with Java 21 newest methods